feat: Favicon for all pages

--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
@@ -90,7 +91,8 @@
             <br>
 
             <div class="row">
-                <p>By clciking Register, you understand and agree to the <a href="#">terms and conditions</a> of Car Sales Australia.</p>
+                <p>By clciking Register, you understand and agree to the <a href="#">terms and conditions</a> of Car
+                    Sales Australia.</p>
                 <input type="submit" value="Register" class="btn">
             </div>
 
