--- a/addcar.html
+++ b/addcar.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Add Car</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
     <script src='js/main.js'></script>
 </head>
+
 <body>
 
     <nav class="navbar">
         <div class="logo">
-          <a href="index.html"><img src="images/logo.png" alt="Logo" /></a>
+            <a href="index.html"><img src="images/logo.png" alt="Logo" /></a>
         </div>
         <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="buy.html">Buy</a></li>
-          <li><a href="#">Sell</a></li>
-          <li><a href="about.html">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="buy.html">Buy</a></li>
+            <li><a href="#">Sell</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
         <ul class="nav-right">
-          <li><a href="login.html">Login</a></li>
-          <li><a href="signup.html">Sign Up</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="signup.html">Sign Up</a></li>
         </ul>
-      </nav>
+    </nav>
 
 
-      <div class="container">
+    <div class="container">
 
         <form name="addCarForm" onsubmit="return validateAddCarForm()" id="login-form">
             <h2>
@@ -94,15 +96,16 @@
             </div>
         </form>
 
-      </div>
-      
+    </div>
 
-      <footer>
+
+    <footer>
         <p>
-          &copy 2024 Aussie Car Sales<br />
-          <a href="mailto:info@aussiecarsales.com.au">info@aussiecarsales.com.au</a>
+            &copy 2024 Aussie Car Sales<br />
+            <a href="mailto:info@aussiecarsales.com.au">info@aussiecarsales.com.au</a>
         </p>
-      </footer>
-    
+    </footer>
+
 </body>
+
 </html>
