--- a/buy.html
+++ b/buy.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />`
   <title>Buy</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
@@ -43,7 +43,8 @@
         </div>
 
         <div class="col-3">
-          <button value="Go" class="btn" style="margin-top: 0px; padding: 8px 20px; width: 100%;" onclick="return validateSearchCarForm()">Go</button>
+          <button value="Go" class="btn" style="margin-top: 0px; padding: 8px 20px; width: 100%;"
+            onclick="return validateSearchCarForm()">Go</button>
         </div>
       </div>
 
