feat: Include inspirations on footer

--- a/about.html
+++ b/about.html
@@ -188,7 +188,20 @@
   <footer>
     <p>
       &copy 2024 Aussie Car Sales<br />
-      <a href="mailto:info@aussiecarsales.com.au">info@aussiecarsales.com.au</a>
+      Contact: <a href="mailto:info@aussiecarsales.com.au">info@aussiecarsales.com.au</a>
+      <br>
+      <br>
+      Color inspiration: <a
+        href="https://www.figma.com/design/psy9I5hH6WWJzpbjzVhL0Q/Accessible-Colour-Palettes-(Community)?node-id=159-23&node-type=CANVAS&t=St9T3WZ7nOOR0G4v-0"
+        target="_blank">Accessible Color Palette</a>
+      <br>
+
+      <br>
+      Design Inspiration:<br>
+      <a href="https://www.iamsajid.com/" target="_blank">Sajid</a><br>
+      <a href="https://www.carsales.com.au/" target="_blank">Care Sales</a><br>
+      <a href="https://www.w3schools.com/" target="_blank">w3schools</a><br>
+
     </p>
   </footer>
 </body>
