feat: Login with password encryption

--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
 
     <div class="container">
 
-        <form name="loginForm" onsubmit="return validateLoginFields()" id="login-form">
+        <form name="loginForm" onsubmit="return validateLoginFields()" id="login-form" method="POST" action="login.php">
             <h2>
                 Login to buy and sell cars
             </h2>
